@@ -140,6 +140,7 @@ You can find links to these tutorials and other documentation files below.
 <a href=ref/Rect.html#move>Rect.move</a> - new rectangle with position changed<br>
 <a href=ref/Rect.html#normalize>Rect.normalize</a> - corrects negative sizes<br>
 <a href=ref/Rect.html#union>Rect.union</a> - rectangle covering both input<br>
+<a href=ref/Rect.html#unionall>Rect.unionall</a> - rectangle covering all inputs<br>
 <a href=ref/Sound.html#fadeout>Sound.fadeout</a> - fadeout all channels playing this sound<br>
 <a href=ref/Sound.html#get_num_channels>Sound.get_num_channels</a> - number of channels with sound<br>
 <a href=ref/Sound.html#get_volume>Sound.get_volume</a> - query volume for sound<br>
